# ProjectEuler

./: .gitignore  CMakeLists.txt  Makefile  prog  reading-list.md  readme.md  setup.py
.git_backup/: config  index  packed-refs
.git_old/: ORIG_HEAD
.git_old/logs/: HEAD
.ipynb_checkpoints/: 497-checkpoint.ipynb
notebooks/: 152.ipynb  153.ipynb  161.ipynb  163.ipynb  167.ipynb  168.ipynb  170.ipynb  175.ipynb  176.ipynb  180.ipynb  181.ipynb  184.ipynb  192.ipynb  194.ipynb  195.ipynb  198.ipynb  199.ipynb  201.ipynb  209.ipynb  210.ipynb  217.ipynb  219.ipynb  220.ipynb  221.ipynb  222.ipynb  223.ipynb  224.ipynb  226.ipynb  227.ipynb  229.ipynb  232.ipynb  233.ipynb  236.ipynb  238.ipynb  240.ipynb  241.ipynb  242.ipynb  247.ipynb  248.ipynb  251.ipynb  (+136 more)
notebooks/.ipynb_checkpoints/: 152-checkpoint.ipynb  153-checkpoint.ipynb  157-checkpoint.ipynb  181-checkpoint.ipynb  182-checkpoint.ipynb  189-checkpoint.ipynb  199-checkpoint.ipynb  213-checkpoint.ipynb  (+20 more)
scripts/: 143.py  152.cc  152.py  153.py  156.py  157.py  161.cc  163.cc  163.py  167.cc  167.py  168.py  171.py  175.py  176.ipynb  177.py  181.py  182.py  184.py  192.py  195.py  196.py  198.cc  198.py  200.cpp  208.cc  210.cc  210.py  212.cc  213.py  218.py  219.cc  219.py  221.py  223.py  224.py  228.cc  229.cc  233.py  236.py  (+116 more)
utility/: 195.ipynb  circles.py  factorial.py  get_divs.py  miller_rabin.py  moebius.py  pi.py  prime_factors.py  sieve.py  tonelli_shanks.py  totient.py  triangle.py
utils/: crt.py  divisor.py  factorial.py  matrix.py  mckay.py  pi.py  prime_factors.py  print.py  totient.py
(+7 files in other folders)
